# segmentation-tensorrt

./: README.md
binary/: CMakeLists.txt  infer_bin.cpp
inference/: calib_files.csv  valid_files.csv
inference/binary/: CMakeLists.txt  infer_bin
inference/seg/: CMakeLists.txt  infer_seg.cpp
seg/: CMakeLists.txt  infer_seg  infer_seg.cpp
training/: steel_defect_detection.ipynb
utils/: calib_files.py  dice_coef.py  dice_coef_total.py  monitor-gpu.py
